# tbda-project

./: README.md  app.py  pyproject.toml
db/: provedores.json
pages/: 1_Assinantes por data.py  2_Assinantes por ano.py  3_Grande vs pequeno.py  4_Assinantes por tecnologia.py
services/: mongo.py
