[project]
name = "tbda-project"
version = "0.1.0"
description = ""
authors = [
    {name = "guiwb"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.56.0,<2.0.0)",
    "pymongo (>=4.17.0,<5.0.0)",
    "pandas (>=3.0.2,<4.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
